fixed horizontal scroll issue

--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ nav {
   overflow-y: hidden;
   height: 100%;
   width: 100%;
-  background-color: red;
   display: flex;
   align-items: center;
   justify-content: space-between;
